# harnyx

./: .coveragerc  .env.example  .gitignore  .ruff.toml  README.md  conftest.py  mypy.ini  pyproject.toml  pytest.ini  uv-workspace.toml
compat/caster-commons/: pyproject.toml
compat/caster-miner/: pyproject.toml
compat/caster-miner-sdk/: pyproject.toml
compat/caster-sandbox/: pyproject.toml
compat/caster-validator/: pyproject.toml
validator/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
validator/scripts/: operator_down.sh  operator_logs.sh  operator_up.sh
validator/src/caster_validator/: server.py
validator/src/caster_validator/application/: accept_batch.py  evaluate_criterion.py  invoke_entrypoint.py  scheduler.py  status.py  submit_weights.py
validator/src/caster_validator/domain/: agent.py  evaluation.py  exceptions.py
validator/src/caster_validator/infrastructure/: parsers.py
validator/src/caster_validator/runtime/: agent_artifact.py  bootstrap.py  evaluation_worker.py  llm_factory.py  sandbox.py  settings.py  weight_worker.py
validator/src/harnyx_validator/: server.py  version.py
validator/src/harnyx_validator/application/: accept_batch.py  assigned_work.py  evaluate_task_run.py  invoke_entrypoint.py  monitor_heartbeat.py  platform_tool_proxy.py  restore_batch.py  scheduler.py  similarity_judge.py  status.py  submit_weights.py
validator/src/harnyx_validator/domain/: evaluation.py  exceptions.py  shared_config.py  weight.py
validator/src/harnyx_validator/infrastructure/: parsers.py
validator/src/harnyx_validator/runtime/: agent_artifact.py  bootstrap.py  evaluation_worker.py  llm_factory.py  platform_work_worker.py  registration_metadata.py  restore_worker.py  settings.py  weight_worker.py
validator/tests/: conftest.py
validator/tests/application/: test_accept_batch.py  test_application_orchestration.py  test_claims_provider.py  test_evaluate_criterion.py  test_evaluation_batch_service.py  test_evaluation_runner.py  test_evaluation_scoring.py  test_execute_tool.py  test_execute_tool_results.py  test_invoke_entrypoint.py  test_miner_task_dto.py  test_monitor_heartbeat.py  test_platform_tool_proxy.py  test_restore_batch.py  test_run_support_shutdown.py  test_scheduler.py  test_similarity_judge.py  test_submit_weights.py
validator/tests/domain/: test_agent_registry.py  test_evaluation.py  test_miner_task.py  test_receipt_registry.py  test_token_policy.py  test_usage_tracker.py  test_weight_submission.py
validator/tests/fixtures/: fakes.py  subtensor.py
validator/tests/infrastructure/: test_backoff_file.py  test_registration_client.py  test_server_bootstrap.py
validator/tests/infrastructure/http/: test_control_routes.py  test_middleware.py  test_routes.py  test_similarity_route.py  test_system_routes.py
validator/tests/infrastructure/rpc/: test_server.py
validator/tests/infrastructure/sandbox/: test_docker_manager.py
validator/tests/integration/: conftest.py  test_sandbox_cpuset.py
validator/tests/runtime/: test_batch_worker.py  test_bedrock_provider_wiring.py  test_bootstrap_scoring.py  test_inbound_platform_auth.py  test_platform_work_worker.py  test_registration_metadata.py  test_settings.py  test_tool_invoker.py
(+201 files in other folders)
