[project]
name = "caster-commons"
version = "0.1.0"
description = "Compatibility workspace package preserving legacy commons package selectors."
requires-python = ">=3.11,<3.12"
dependencies = [
  "harnyx-commons>=0.1.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caster_commons_compat"]
