[project]
name = "caster-miner-sdk"
version = "0.1.1"
description = "Compatibility workspace package preserving legacy miner SDK package selectors."
requires-python = ">=3.11,<3.12"
dependencies = [
  "harnyx-miner-sdk>=0.1.1",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caster_miner_sdk_compat"]
