[project]
name = "caster-miner"
version = "0.1.0"
description = "Compatibility workspace package preserving legacy miner package selectors."
requires-python = ">=3.11,<3.12"
dependencies = [
  "harnyx-miner>=0.1.0",
]

[project.scripts]
caster-miner-dev = "harnyx_miner.dev:main"
caster-miner-submit = "harnyx_miner.submit:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caster_miner_compat"]
