[project]
name = "caster-sandbox"
version = "0.1.0"
description = "Compatibility workspace package preserving legacy sandbox package selectors."
requires-python = ">=3.11,<3.12"
dependencies = [
  "harnyx-sandbox>=0.1.0",
]

[project.scripts]
caster-sandbox = "harnyx_sandbox.app:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caster_sandbox_compat"]
