[project]
name = "caster-validator"
version = "0.1.0"
description = "Compatibility workspace package preserving legacy validator package selectors."
requires-python = ">=3.11,<3.12"
dependencies = [
  "harnyx-validator>=0.1.0",
]

[project.scripts]
caster-validator = "harnyx_validator.server:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caster_validator_compat"]
